--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -8,15 +8,184 @@ body{
 header{
     display: flex;
     margin: 0;
-    background-color: gray;
-    border-radius: 0;
-    display: block;
-    justify-content: space-between;
+    background-color: #1ED65E;
+    border-radius: 0px;
     align-items: center;
-    padding: 5px;
+    justify-content: space-between;
+    padding: 25px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    font-family: system-ui;
+ 
 }
 nav {
     list-style: none;
     padding: 5px;
     margin: 5px;
+    justify-content: space-between;
+    display: flex;
+    
+}
+nav li{
+    margin-left: 70px;
+    padding: 12px 0;
+    position: relative;
+}
+nav li a {
+    text-decoration: none;
+    color:white;
+    padding: 12px;
+}
+nav li a::before{
+    display: block;
+    content: '';
+    width: 0%;
+    background: black;
+    height: 5px;
+    top: 0;
+    position: absolute;
+    transition: width 1s;
+}
+nav li a:hover::before{
+    width: 100%;
+}
+.Contenedor1{
+    position: absolute;
+    left: 48%;
+    top: 20%;
+    padding: 10px;
+    transform: translate(-80%,50%);
+}
+input{
+    outline:none;
+    box-sizing: border-box;
+    height: 40px;
+    width: 200%;
+    border-radius: 15px;
+    font-size: 20px;
+    border: 1px solid #1db954;
+    transition: all .7s ease;
+    background: #191414;
+    color:wheat;
+    
+}
+::placeholder{
+    color: grey;
+}
+input:hover {
+    transition: all .7s ease;
+    border: 2px solid #5AB114;
+    width: 205%;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+body .Container2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 50%;
+  margin: 40px 0;
+}
+
+body .Contenedor2 .card {
+  position: absolute;
+  top: 40%;
+  width: 30%;
+  height: 400px;
+  box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2),
+    inset -5px -5px 15px rgba(255, 255, 255, 0.1),
+    5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
+  border-radius: 15px;
+  margin: 30px;
+  transition: 0.5s;
+}
+body .Contenedor2 .card:nth-child(1) .box .content a {
+  background: #2196f3;
+}
+
+body .Contenedor2 .card .box {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  right: 20px;
+  bottom: 20px;
+  background: #2a2b2f;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  transition: 0.5s;
+}
+
+body .Container2 .card .box:hover {
+  transform: translateY(-50px);
+}
+
+body .Contenedor2 .card .box:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.03);
+}
+
+body .Contenedor2 .card .box .content {
+  padding: 20px;
+  text-align: center;
+}
+
+body .Contenedor2 .card .box .content h2 {
+  position: absolute;
+  top: -10px;
+  right: 30px;
+  font-size: 8rem;
+  color: rgba(255, 255, 255, 0.1);
+}
+
+body .Contenedor2 .card .box .content h3 {
+  font-size: 1.8rem;
+  color: #fff;
+  z-index: 1;
+  transition: 0.5s;
+  margin-bottom: 15px;
+}
+
+body .Contenedor2 .card .box .content p {
+  font-size: 1rem;
+  font-weight: 300;
+  color: rgba(255, 255, 255, 0.9);
+  z-index: 1;
+  transition: 0.5s;
+}
+
+body .Contenedor2 .card .box .content a {
+  position: relative;
+  display: inline-block;
+  padding: 8px 20px;
+  background: black;
+  border-radius: 5px;
+  text-decoration: none;
+  color: white;
+  margin-top: 20px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  transition: 0.5s;
+}
+body .Contenedor2 .card .box .content a:hover {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.6);
+  background: #fff;
+  color: #000;
+}
+
+.foto1{
+   width: 50%;
+   border-radius: 5px;
 }
