--- a/client/src/CSS/cards.css
+++ b/client/src/CSS/cards.css
@@ -26,10 +26,16 @@
 
 .img {
 	background-color: #84e932;
-	width: 60px;
-	height: 60px;
-	max-width: 100px;
-	max-height: 100px;
+	/* width: 60px;
+	height: 60px; */
+	max-width: 100%;
+	/* max-height: 100px; */
+}
+
+.imgCard {
+	background-color: rgb(16, 68, 157);
+	max-width: 50%;
+	display: flex;
 }
 
 .infoImg {
