--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -286,3 +286,41 @@ body .Contenedor2 .card .box .content a:hover {
   padding: 15px;
   color: red;
 }
+.User {
+	text-align: center;
+	align-items: center;
+	margin: auto;
+	width: 60%;
+	margin-top: 50px;
+	margin-bottom: 50px;
+	padding: 15px;
+	background-color: #2a2b2f;
+	border-radius: 15px;
+	border: 2px solid #999797;
+}
+.UserText{
+	font-size: 30px;
+  	padding: 15px;
+  	font-family: "Poppins", sans-serif;
+}
+.UserText2{
+	font-size: 20px;
+	padding: 10px;
+	color: #1ED65E;
+}
+.caja{
+	display:table-cell;
+	text-align: center;
+	width: 33%;
+}
+.caja2{
+	display:table-cell;
+	text-align: center;
+	width: 37%;
+}
+.InputSong{
+	width: 70%;
+}
+.InputSong:hover{
+	width: 72%;
+}
