--- a/client/src/CSS/cards.css
+++ b/client/src/CSS/cards.css
@@ -2,7 +2,7 @@
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	background-color: #d10df0;
+	background-color: #d20df000;
 	margin-top: 5%;
 	margin-right: 5%;
 	margin-left: 5%;
@@ -24,8 +24,9 @@
 	border-radius: 10px;
 }
 
+
 .img {
-	background-color: #84e932;
+
 	width: 60px;
 	height: 60px;
 	max-width: 100px;
@@ -33,6 +34,40 @@
 }
 
 .infoImg {
-	background-color: rgb(16, 68, 157);
+	background-color: rgba(16, 68, 157, 0);
 	max-width: 50%;
 }
+
+h2 {
+	font-family: system-ui;
+	color: transparent;
+	font-size: 26px;
+	font-weight: 600;
+	letter-spacing: -0.015em;
+	background-image: linear-gradient(
+	   180deg,
+	   #1ed65e,
+	   #1ed65e
+	);
+	background-clip: text;
+	-webkit-background-clip: text;
+ } 
+ 
+ h3 {
+	font-family: system-ui;
+	color: transparent;
+	font-size: 26px;
+	font-weight: 600;
+	letter-spacing: -0.015em;
+	background-image: linear-gradient(
+	   180deg,
+	   #ffffff,
+	   #c4c4c4
+	);
+	background-clip: text;
+	-webkit-background-clip: text;
+ } 
+
+ .reproducir{
+	
+ }
