--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -1,13 +1,19 @@
 body {
-	background-color: black;
-	color: white;
+	background-color: rgb(20, 20, 20);
+	color: rgb(255, 255, 255);
 	margin: auto;
 	align-items: center;
+	position: relative;
+	padding-bottom: 3em;
+	min-height: 100vh;
 }
 header {
 	display: flex;
 	margin: 0;
-	background-color: #1ed65e;
+	background-image: linear-gradient(
+		180deg,
+		#1ed65e,
+		#1bbd75);
 	border-radius: 0px;
 	align-items: center;
 	justify-content: space-between;
@@ -50,6 +56,22 @@ header {
 .nav li a:hover::before {
 	width: 100%;
 }
+
+footer {
+	text-align: center;
+	justify-content: center;
+	padding: 5px;
+	background-image: linear-gradient(
+		180deg,
+		#1ed65e,
+		#1bbd75);
+	color: #fff;
+	margin-top: auto;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+ }
+ 
 
 .Contenedor1 {
 	/* position: absolute; */
