--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -213,6 +213,7 @@ body .Contenedor2 .card .box .content a:hover {
 	width: 52%;
 }
 .BotonRegis {
+	text-align: center;
 	margin-top: 15px;
 	background-color: #1ed65e;
 	color: white;
@@ -323,4 +324,24 @@ body .Contenedor2 .card .box .content a:hover {
 }
 .InputSong:hover{
 	width: 72%;
+}
+.Cerrar{
+	margin-top: 15px;
+	background-color: #1ED65E;
+	color:white;
+	font-family: "Poppins", sans-serif;
+	padding: 15px;
+	width: 40%;
+	height: 65px;
+	font-size: 25px;
+	border-radius: 15px;
+	transition: all .7s ease;
+}
+.Cerrar:hover{
+	width: 42%;
+	color:#1db954;
+	background-color: wheat;
+	border-color: #1db954;
+	transition: all .7s ease;
+	font-size: 27px;
 }
