--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -87,7 +87,7 @@ input:hover {
 	font-family: "Poppins", sans-serif;
 }
 
-body .Container2 {
+.Container2 {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -96,7 +96,7 @@ body .Container2 {
 	margin: 40px 0;
 }
 
-body .Contenedor2 .card {
+.Contenedor2 .card {
 	position: absolute;
 	top: 40%;
 	width: 70%;
@@ -107,11 +107,11 @@ body .Contenedor2 .card {
 	margin: 30px;
 	transition: 0.5s;
 }
-body .Contenedor2 .card:nth-child(1) .box .content a {
+.Contenedor2 .card:nth-child(1) .box .content a {
 	background: #2196f3;
 }
 
-body .Contenedor2 .card .box {
+.Contenedor2 .card .box {
 	position: absolute;
 	top: 20px;
 	left: 20px;
@@ -126,11 +126,11 @@ body .Contenedor2 .card .box {
 	transition: 0.5s;
 }
 
-body .Container2 .card .box:hover {
+.Container2 .card .box:hover {
 	transform: translateY(-50px);
 }
 
-body .Contenedor2 .card .box:before {
+.Contenedor2 .card .box:before {
 	content: "";
 	position: absolute;
 	top: 0;
@@ -140,12 +140,12 @@ body .Contenedor2 .card .box:before {
 	background: rgba(255, 255, 255, 0.03);
 }
 
-body .Contenedor2 .card .box .content {
+.Contenedor2 .card .box .content {
 	padding: 20px;
 	text-align: center;
 }
 
-body .Contenedor2 .card .box .content h2 {
+.Contenedor2 .card .box .content h2 {
 	position: absolute;
 	top: -10px;
 	right: 30px;
@@ -153,7 +153,7 @@ body .Contenedor2 .card .box .content h2 {
 	color: rgba(255, 255, 255, 0.1);
 }
 
-body .Contenedor2 .card .box .content h3 {
+.Contenedor2 .card .box .content h3 {
 	font-size: 1.8rem;
 	color: #fff;
 	z-index: 1;
@@ -161,7 +161,7 @@ body .Contenedor2 .card .box .content h3 {
 	margin-bottom: 15px;
 }
 
-body .Contenedor2 .card .box .content p {
+.Contenedor2 .card .box .content p {
 	font-size: 1rem;
 	font-weight: 300;
 	color: rgba(255, 255, 255, 0.9);
@@ -169,7 +169,7 @@ body .Contenedor2 .card .box .content p {
 	transition: 0.5s;
 }
 
-body .Contenedor2 .card .box .content a {
+.Contenedor2 .card .box .content a {
 	position: relative;
 	display: inline-block;
 	padding: 8px 20px;
@@ -181,7 +181,7 @@ body .Contenedor2 .card .box .content a {
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 	transition: 0.5s;
 }
-body .Contenedor2 .card .box .content a:hover {
+.Contenedor2 .card .box .content a:hover {
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.6);
 	background: #fff;
 	color: #000;
@@ -232,57 +232,133 @@ body .Contenedor2 .card .box .content a:hover {
 	transition: all 0.7s ease;
 	font-size: 27px;
 }
-.BotonRegis:hover{
-  width: 27%;
-  color:#1db954;
-  background-color: wheat;
-  border-color: #1db954;
-  transition: all .7s ease;
-  font-size: 27px;
+.BotonRegis:hover {
+	width: 27%;
+	color: #1db954;
+	background-color: wheat;
+	border-color: #1db954;
+	transition: all 0.7s ease;
+	font-size: 27px;
 }
-.Login{
-  align-items: center;
-  text-align: center;
-  margin: auto;
-  width: 80%;
-  margin-top: 50px;
-  padding: 15px;
+.Login {
+	align-items: center;
+	text-align: center;
+	margin: auto;
+	width: 80%;
+	margin-top: 50px;
+	padding: 15px;
 }
-.LoginHolder{
-  height: 60px;
-  width: 50%;
-  font-family: "Poppins", sans-serif;
-  font-size: 40px;
+.LoginHolder {
+	height: 60px;
+	width: 50%;
+	font-family: "Poppins", sans-serif;
+	font-size: 40px;
 }
-.LoginHolder:hover{
-  width: 52%;
+.LoginHolder:hover {
+	width: 52%;
 }
-.LoginText{
-  font-size: 50px;
-  padding: 15px;
-  font-family: "Poppins", sans-serif;
+.LoginText {
+	font-size: 50px;
+	padding: 15px;
+	font-family: "Poppins", sans-serif;
 }
-.LoginBtn{
-  margin-top: 15px;
-  background-color: #1ED65E;
-  color:white;
-  font-family: "Poppins", sans-serif;
-  padding: 15px;
-  width: 25%;
-  height: 65px;
-  font-size: 25px;
-  border-radius: 15px;
-  transition: all .7s ease;
+.LoginBtn {
+	margin-top: 15px;
+	background-color: #1ed65e;
+	color: white;
+	font-family: "Poppins", sans-serif;
+	padding: 15px;
+	width: 25%;
+	height: 65px;
+	font-size: 25px;
+	border-radius: 15px;
+	transition: all 0.7s ease;
 }
-.LoginBtn:Hover{
-  width: 27%;
-  color:#1db954;
-  background-color: wheat;
-  border-color: #1db954;
-  transition: all .7s ease;
-  font-size: 27px;
+.LoginBtn:hover {
+	width: 27%;
+	color: #1db954;
+	background-color: wheat;
+	border-color: #1db954;
+	transition: all 0.7s ease;
+	font-size: 27px;
 }
-.Error{
-  padding: 15px;
-  color: red;
+.Error {
+	padding: 15px;
+	color: red;
+}
+
+/* CSS DE LA BARRA DE BÚSQUEDA*/
+
+.search {
+	margin-left: 30%;
+	margin-bottom: 10%;
+}
+
+.searchInputs {
+	margin-top: 105px;
+	display: flex;
+}
+
+.search input {
+	background-color: white;
+	border: 0;
+	border-radius: 2px;
+	border-top-right-radius: 0px;
+	border-bottom-right-radius: 0px;
+	font-size: 18px;
+	padding: 15px;
+	height: 30px;
+	width: 300px;
+}
+
+.searchIcon {
+	height: 60px;
+	width: 50px;
+	background-color: white;
+	display: grid;
+	place-items: center;
+}
+
+input:focus {
+	outline: none;
+}
+.searchIcon svg {
+	font-size: 35px;
+}
+
+.dataResult {
+	margin-top: 5px;
+	width: 300px;
+	height: 200px;
+	background-color: white;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	overflow: hidden;
+	overflow-y: auto;
+}
+
+.dataResult::-webkit-scrollbar {
+	display: none;
+}
+
+.dataResult .dataItem {
+	width: 100%;
+	height: 50px;
+	display: flex;
+	align-items: center;
+	color: black;
+}
+
+.dataItem p {
+	margin-left: 10px;
+}
+a {
+	text-decoration: none;
+}
+
+a:hover {
+	background-color: lightgrey;
+}
+
+#clearBtn {
+	cursor: pointer;
 }
