--- a/client/src/CSS/cards.css
+++ b/client/src/CSS/cards.css
@@ -83,11 +83,11 @@ h2 {
 	-webkit-background-clip: text;
  } 
 
- .audio{
+ /* .audio{
 	font-family: system-ui;
 	background-image: linear-gradient(
 		180deg,
 		#1ed65e,
 		#1ed65e
 	 );
- }
+ } */
