--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -1,8 +1,8 @@
 body {
 	background-color: rgb(27, 27, 27);
-	/* color: white;
-	margin: auto;
-	align-items: center; */
+	color: white;
+	/* margin: auto;
+	align-items: center;  */
 }
 
 header {
@@ -376,49 +376,49 @@ a:hover {
 	border-radius: 15px;
 	border: 2px solid #999797;
 }
-.UserText{
+.UserText {
 	font-size: 30px;
-  	padding: 15px;
-  	font-family: "Poppins", sans-serif;
+	padding: 15px;
+	font-family: "Poppins", sans-serif;
 }
-.UserText2{
+.UserText2 {
 	font-size: 20px;
 	padding: 10px;
-	color: #1ED65E;
+	color: #1ed65e;
 }
-.caja{
-	display:table-cell;
+.caja {
+	display: table-cell;
 	text-align: center;
 	width: 33%;
 }
-.caja2{
-	display:table-cell;
+.caja2 {
+	display: table-cell;
 	text-align: center;
 	width: 37%;
 }
-.InputSong{
+.InputSong {
 	width: 70%;
 }
-.InputSong:hover{
+.InputSong:hover {
 	width: 72%;
 }
-.Cerrar{
+.Cerrar {
 	margin-top: 15px;
-	background-color: #1ED65E;
-	color:white;
+	background-color: #1ed65e;
+	color: white;
 	font-family: "Poppins", sans-serif;
 	padding: 15px;
 	width: 40%;
 	height: 65px;
 	font-size: 25px;
 	border-radius: 15px;
-	transition: all .7s ease;
+	transition: all 0.7s ease;
 }
-.Cerrar:hover{
+.Cerrar:hover {
 	width: 42%;
-	color:#1db954;
+	color: #1db954;
 	background-color: wheat;
 	border-color: #1db954;
-	transition: all .7s ease;
+	transition: all 0.7s ease;
 	font-size: 27px;
 }
