--- a/client/src/CSS/cards.css
+++ b/client/src/CSS/cards.css
@@ -30,6 +30,25 @@
 	 );
 }
 
+.cardArtist {
+	display: flex;
+	align-items: center;
+	background-color: #282828;
+	width: 600px;
+	height: 320px;
+    max-width: 600px;
+	max-height: 320px; 
+	gap: 40px;
+	margin: 15px;
+	border-radius: 10px;
+	box-shadow: 1.5px 1.5px 5px #1ed65e;
+	background-image: linear-gradient(
+		180deg,
+		#323232,
+		#282828
+	 );
+}
+
 .img {
 	background-color: #84e932;
 	width: 280px;
