--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -482,6 +482,23 @@ a {
     font-size: 27px;
 }
 
+.InputSelect2{
+	width: 40%;
+	height: 30px;
+	border-radius: 5px;
+	background: #1db954;
+	color: white;
+	transition: all .7s ease;
+	font-size: 12px;
+	margin: 2px;
+}
+
+.InputSelect2:hover{
+	width:43%;
+    transition: all .7s ease;
+    font-size: 14px;
+}
+
 .textofiltro{
 	font-size: 20px;
   	padding: 15px;
